<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="3dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"

    >
    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textAlignment="center"
            android:id="@+id/Nazwa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nazwa_adress"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:targetApi="o" />


        <LinearLayout
            android:id="@+id/line_hint"
            android:elevation="2dp"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <EditText
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:inputType="numberDecimal"
                android:id="@+id/position1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pozycja_x"
                android:importantForAutofill="no" tools:targetApi="o"/>
            <EditText
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:inputType="numberDecimal"
                android:id="@+id/position2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pozycja_y"
                android:importantForAutofill="no" tools:targetApi="o"/>

        </LinearLayout>

        <EditText
            android:textAlignment="center"
            android:id="@+id/Opis"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="100dp"
            android:hint="@string/opis"
            android:autofillHints=""
            android:importantForAutofill="no" tools:targetApi="o"/>

        <DatePicker
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </LinearLayout>


</android.support.v7.widget.CardView>