<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/tlox"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/jeszcze_tylko_krok"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:padding="5dp"

        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!--        app:cardBackgroundColor="@color/whiteopacity"-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nick_registration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nick"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/email_registration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="#000"

                android:textSize="15sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/password_registration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/pawsswords"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="#000"

                android:textSize="15sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <Button
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@color/colorPrimaryDark"
                android:shadowRadius="1.2"
                android:text="@string/zarejestruj"
                android:textColor="@android:color/white"
                android:theme="@style/button" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="50dp" />
</android.support.constraint.ConstraintLayout>