<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/tlox"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <TextView
        android:text="@string/znacz_co_chesz_ndo_cz_do_nas"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_margin="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:padding="5dp"
        android:keepScreenOn="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="#000"

                android:textSize="15sp"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/pawssword"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="#000"

                android:textSize="15sp"
                android:autofillHints="" tools:targetApi="o"/>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@color/colorPrimaryDark"
                android:shadowRadius="1.2"
                android:text="@string/zaloguj"
                android:textColor="@android:color/white"
                android:theme="@style/button" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="50dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>